mis a jour de la methode nearest pour prendre en compte le radius + test